<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="about_about">Welcome to WizCore. This app is about to track your score for the card game Wizard\u00A9. For detailed information
    how the app works, open the tutorial from the main menu (right top corner).
    \n\nFor suggestions or just a few words with the developers, contact us via the mail button at the bottom.
    \n\nHave fun</string>
    <string name="about_spend">Spend the devs coffee</string>
    <string name="about_text">send mail...</string>
    <string name="about_rate">If you like this app, please rate 5 stars and help to spread it.</string>

    <string name="action_about">About</string>

    <string name="alert_abortGame">Abort Game</string>
    <string name="alert_backMain">Back to main?</string>
    <string name="alert_backScoresheet">Back to scoresheet?</string>
    <string name="alert_closeApp">Close app?</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_goBackMain">and go back to main menu?</string>
    <string name="alert_inputsLost">Your inputs will be lost!</string>
    <string name="alert_playerDeleted">Player deleted</string>
    <string name="alert_scoresLost">Scores will be lost!</string>

    <string name="app_name">WizCore</string>

    <string name="bids_activity_calcScore">Calculate score</string>
    <string name="bids_enterAll">Enter all tricks</string>
    <string name="bids_less0">You can\'t make less than 0 tricks</string>
    <string name="bids_maxAmount">Max amount of tricks already reached</string>
    <string name="bids_sumofBids">Sum of bids</string>
    <string name="bids_sumofTricks">Sum of tricks</string>
    <string name="bids_youCantTricks">You can\'t make more than all tricks</string>

    <string name="button_addPlayer">Add new player</string>
    <string name="button_delPlayer">Delete player</string>
    <string name="button_editPlayers">Edit players</string>
    <string name="button_got">got it</string>
    <string name="button_saveplayer">Save player</string>
    <string name="button_startGame">Start game</string>
    <string name="button_update">Update player</string>
    <string name="button_viewHighscores">Highscores</string>
    <string name="button_backMain">Main menu</string>
    <string name="button_rate">please rate me</string>

    <string name="configureGame_actualPlayers">players in game\nclick to remove</string>
    <string name="configureGame_addPlayer">Add Player</string>
    <string name="configureGame_alreadyIn">Player already in game</string>
    <string name="configureGame_bidsNotRounds">Bids sum must differ from round</string>
    <string name="configureGame_enterName">Please enter a name</string>
    <string name="configureGame_full">I\'m full"</string>
    <string name="configureGame_gameSetUp">set up the game</string>
    <string name="configureGame_invitation">Invitation only</string>
    <string name="configureGame_maxReached">Maximum amount of Players reached</string>
    <string name="configureGame_playerName">Player name (max 6 chars)</string>
    <string name="configureGame_poolPlayers">saved players\nclick to add</string>


    <string name="editPlayers_alltimescore">All-Time</string>
    <string name="editPlayers_explEdit">click on player to edit</string>

    <string name="general_bids">Bids</string>
    <string name="general_done">done</string>
    <string name="general_name">Name</string>
    <string name="general_please">please</string>
    <string name="general_points">Points</string>
    <string name="general_top">Top</string>
    <string name="general_tricks">Tricks</string>

    <string name="highscore_pos">Pos</string>
    <string name="highscore_score">Score</string>


    <string name="main_activity_welcome">Welcome to WizCore</string>
    <string name="main_activity_welcome_submsg">keep the magic</string>

    <string name="playerDetail_allTime">All-Time Score</string>
    <string name="playerDetail_playerSaved">Player saved</string>
    <string name="playerDetail_playerUpdated">Player updated</string>

    <string name="scoreSheet_diffPlayer">new players</string>
    <string name="scoreSheet_first">first</string>
    <string name="scoreSheet_gameOver">Game Over</string>
    <string name="scoreSheet_newGame">new game</string>
    <string name="scoreSheet_restart">restart</string>
    <string name="scoreSheet_round">Round</string>
    <string name="scoreSheet_second">second</string>
    <string name="scoreSheet_third">third</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_bids">Bids or tricks</string>
    <string name="title_activity_configure_game">Game setup</string>
    <string name="title_activity_edit_players">Saved players</string>
    <string name="title_activity_player_detail">Player details</string>
    <string name="title_activity_scoresheet">Scoresheet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view_highscore">Highscore</string>
    <string name="title_activity_start_tutorial">Tutorial</string>

    <string name="tutorial_dont">hide tutorial</string>
    <string name="tutorial_explain">Scroll down the tutorial to see how the app works. You can disable this tutorial at the bottom. If you want to see the tutorial again, just click
    on the top right menu at the main menu.</string>
</resources>
