<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="engelbergbleyel.at.wizcore.MainMenu"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="93dp"
            app:srcCompat="@drawable/wizcore"
            android:id="@+id/imageView4" />

        <TextView
            android:text="@string/main_activity_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_welcome"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="24sp"
            android:paddingTop="10dp" />

        <TextView
            android:text="@string/main_activity_welcome_submsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_submsg"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:text="@string/button_startGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_startGame"
            android:onClick="onClick"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp"
        />

        <Button
            android:text="@string/button_editPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_editPlayers"
            android:onClick="onClick"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp" />

        <Button
            android:text="@string/button_viewHighscores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_viewHscore"
            android:onClick="onClick"
            android:background="@drawable/button"
            android:layout_marginBottom="10dp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/star"
            android:id="@+id/btn_rateMain"
            android:scaleType="fitCenter"
            android:background="@drawable/button"
            android:elevation="0dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick" />

    </LinearLayout>
</RelativeLayout>
