<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_configure_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="engelbergbleyel.at.wizcore.ConfigureGame"
    tools:showIn="@layout/activity_configure_game">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_enterName"
            android:hint="@string/configureGame_hintName"
            android:textAlignment="center"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="10" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/button_startGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_startGame"
                android:textAlignment="center"
                android:textStyle="normal|bold"
                android:onClick="handleOnClickBtnStartGame"
                android:enabled="false"
                android:layout_weight=".5" />

            <Button
                android:text="@string/button_addPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_addNewPlayer"
                android:onClick="handleOnClickBtnAddPlayer"
                android:layout_weight=".5" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/configureGame_poolPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight=".5"
                android:textAlignment="center" />

            <TextView
                android:text="@string/configureGame_actualPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight=".5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_players"
            android:layout_weight="1">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView_playerPool"
                android:layout_weight=".5" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:id="@+id/listView_playerAdded"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:fadeScrollbars="false"
                android:fadingEdge="none" />
        </LinearLayout>

        <Switch
            android:text="@string/configureGame_bidsNotRounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sw_bidNotRounds"
            android:checked="true" />

    </LinearLayout>
</RelativeLayout>
