<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_start_tutorial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="engelbergbleyel.at.wizcore.StartTutorial"
    tools:showIn="@layout/activity_start_tutorial">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:textSize="18sp"
        android:text="@string/tutorial_explain"
        android:layout_marginBottom="10dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/scoredbplay"
                android:id="@+id/imageView"
                android:layout_weight="0.13"
                android:adjustViewBounds="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/confgame"
                android:id="@+id/imageView2"
                android:adjustViewBounds="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ingame"
                android:id="@+id/imageView5"
                android:layout_weight="0.13"
                android:adjustViewBounds="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/tutorial_dont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/chk_tut"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/button_got"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_toMain"
                    android:layout_weight="1" android:background="@drawable/button"/>
            </LinearLayout>

        </LinearLayout>




    </ScrollView>
</LinearLayout>