<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scoresheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="engelbergbleyel.at.wizcore.Scoresheet"
    tools:showIn="@layout/activity_scoresheet">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_Round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_weight=".5"
            />

        <TextView
            android:id="@+id/tv_Bids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_weight=".5"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_play2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:layout_weight="1"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_play3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:layout_weight="1"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play1Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />

            <TextView
                android:id="@+id/tv_play2Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />

            <TextView
                android:id="@+id/tv_play3Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play1Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />

            <TextView
                android:id="@+id/tv_play2Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />

            <TextView
                android:id="@+id/tv_play3Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_play5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tv_play6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible"
                android:textStyle="normal|bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play4Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_play5Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_play6Point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play4Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_play5Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_play6Bid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:visibility="invisible" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="invisible"
        android:id="@+id/div_bottom"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/general_bids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Bids"
            android:layout_weight=".5"
            android:onClick="handleOnClickButtonBids" android:background="@drawable/button"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" />

        <Button
            android:text="@string/general_tricks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Tricks"
            android:layout_weight=".5"
            android:onClick="handleOnClickButtonTricks"
            android:enabled="false" android:background="@drawable/button"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_backMain"
            android:layout_weight=".5"
            android:text="@string/button_backMain"
            android:visibility="invisible"
            android:onClick="handleOnClickButtonMain" android:background="@drawable/button"
            android:layout_marginRight="5dp" />

        <Button
            android:text="@string/scoreSheet_newGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_newGame"
            android:textStyle="normal|bold"
            android:visibility="invisible"
            android:onClick="handleOnClickButtonNewGame"
            android:layout_weight=".5" android:background="@drawable/button"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

</LinearLayout>
